# desarrollo-ia

./: Repositorio de skills agentes prompts.docx  entregable Tirso Diaz dia6.7z  mcp.json  n8n.txt
copernicoaches/atrium/: Cargo.toml  README.md  pyproject.toml
copernicoaches/atrium/atrium/: __init__.py  __main__.py  app.py  controller.py  display.py  filesystem.py  models.py  state.py
copernicoaches/atrium/images/: atrium-small.xcf  atrium-ui.xcf  atrium.xcf  atrium2.xcf
copernicoaches/atrium/specs/python/: SPEC-01-overview.md  SPEC-02-navigation.md  SPEC-03-display.md  SPEC-04-UI-changes.md  SPEC-04-architecture.md  SPEC-05-guarantee-stable-viewport.md
copernicoaches/atrium/specs/rust/: SPEC-01-overview.md  SPEC-02-navigation.md  SPEC-03-display.md  SPEC-04-architecture.md  SPEC-05-guarantee-stable-viewport.md
copernicoaches/atrium/src/: app.rs  controller.rs  display.rs  filesystem.rs  lib.rs  main.rs  models.rs  state.rs
copernicoaches/atrium/tests/: spec_01_overview.rs  spec_02_navigation.rs  spec_03_display.rs  spec_04_architecture.rs  spec_05_stable_viewport.rs  test_spec_01_overview.py  test_spec_02_navigation.py  test_spec_03_display.py  test_spec_04_architecture.py  test_spec_05_stable_viewport.py
copernicoaches/atrium/tests/common/: mod.rs
copernicoaches/docconv/: README.md  pyproject.toml
copernicoaches/docconv/src/docconv/: __main__.py  main.py
copernicoaches/docconv/test-case/: Qué es un LLM.md
copernicoaches/docconv/tests/e2e/: test_e2e.py
copernicoaches/docconv/tests/integration/: test_app.py  test_io.py
copernicoaches/docconv/tests/unit/: test_docx_to_md.py  test_domain_integration.py  test_md_to_docx.py  test_models.py
copernicoaches/explorer/: debug_keys.py  debug_output.txt  pyproject.toml  test_header_behavior.py  test_manual.py  test_navigation.py  test_scroll_header.py  test_write.py  test_write.txt
copernicoaches/explorer/src/miller/: __main__.py
copernicoaches/explorer/tests/: test_input_handler.py  test_model.py  test_navigator.py  test_reader.py  test_renderer.py
copernicoaches/jano/: README.md  pyproject.toml
copernicoaches/jano/images/: jano2-small.xcf  jano2.xcf
copernicoaches/jano/specs/: step-01-project-setup.md  step-02-domain-models.md  step-03-domain-docx-to-md.md  step-04-domain-md-to-docx.md  step-05-infrastructure.md  step-06-application-layer.md  step-07-cli-adapter.md  step-08-mcp-adapter.md  step-09-tests.md  step-10-quality-and-validation.md
copernicoaches/jano/src/: test_mcp_client.py
copernicoaches/jano/src/jano/: __main__.py  main.py
copernicoaches/jano/tests/e2e/: test_cli.py  test_roundtrip.py
copernicoaches/jano/tests/integration/: test_application.py  test_infrastructure.py
copernicoaches/jano/tests/unit/: test_cli_adapter.py  test_docx_to_md.py  test_main.py  test_mcp_adapter.py  test_md_to_docx.py  test_models.py
copernicoaches/madriguera/: README.md  alembic.ini  architecture-definition.md  pyproject.toml
copernicoaches/madriguera/alembic/: env.py
copernicoaches/madriguera/alembic/versions/: 20260320_000001_initial_schema.py
copernicoaches/madriguera/data/config/: balances.json  rules.json
copernicoaches/madriguera/data/inbox/: case_cancel.json  case_neg_bank.json  case_wait.json
copernicoaches/madriguera/images/: madriguera-small.xcf  madriguera.xcf
copernicoaches/madriguera/specs/: README.md  SPEC-01-project-scaffold.md  SPEC-02-domain-models-and-rules.md  SPEC-03-config-adapters.md  SPEC-04-persistence-layer.md  SPEC-05-pipeline-engine.md  SPEC-06-inbound-adapter.md  SPEC-07-business-processor.md  SPEC-08-outbound-adapter.md  SPEC-09-address-date-utcnow-deprecacy.md
copernicoaches/madriguera/src/app/: main.py  time_utils.py
copernicoaches/madriguera/tests/unit/: conftest.py  test_business_processor.py  test_config_readers.py  test_domain_rules.py  test_inbound_adapter.py  test_outbound_adapter.py  test_persistence.py  test_pipeline_engine.py  (+1 more)
(+261 files in other folders)
