[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "madriguera"
version = "0.1.0"
description = "sistema de procesamiento automático basado en archivos"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic",
    "pydantic>=2.0",
    "pydantic-settings",
    "sqlalchemy>=2.0",
    "structlog",
    "typer",
    "watchdog",
]

[project.scripts]
madriguera = "app.cli.commands:app"

[dependency-groups]
dev = [
    "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
